fix(guest_event_location.html): Location -description also parses html code now

--- a/mistelaflask/templates/guest/events/guest_event_location.html
+++ b/mistelaflask/templates/guest/events/guest_event_location.html
@@ -17,7 +17,7 @@
                                     Website
                             </a>
                             </br>
-                            {{  main_event.location.description }}
+                            {{  main_event.location.description | safe }}
                         </div> 
                     </div>
                 </article>    
