feat(guest_event_extra): Added extra template that allows to inject html code into the event tab through the MainEvent contact and description fields

--- a/mistelaflask/templates/admin/main_events/admin_main_event_form.html
+++ b/mistelaflask/templates/admin/main_events/admin_main_event_form.html
@@ -15,7 +15,7 @@
     </div>  
     <div class="field-body">
         <div class="control">
-            <input value="{{main_event.description if main_event.description}}" class="input" type="text" name="description" placeholder="Description" autofocus="">
+            <textarea class="input" type="text" name="description" placeholder="Description" autofocus="">{{main_event.description if main_event.description}}</textarea>
         </div>
     </div>
 </div>
@@ -40,7 +40,7 @@
     </div>  
     <div class="field-body">
         <div class="control">
-            <input value="{{main_event.contact if main_event.contact}}" class="input" type="text" name="contact" placeholder="Contact" autofocus="">
+            <textarea class="input" type="text" name="contact" placeholder="Contact" autofocus="">{{main_event.contact if main_event.contact}}</textarea>
         </div>
     </div>
 </div>
