--- a/mistelaflask/templates/guest/events/guest_event_base.html
+++ b/mistelaflask/templates/guest/events/guest_event_base.html
@@ -3,6 +3,7 @@
 {% block content %}
 <div class="column">
     {% include "guest/events/guest_event_timeline.html" %}
+    {% include "guest/events/guest_event_extra.html" %}
     {% include "guest/events/guest_event_location.html" %}
 </div>
 {% endblock %}
