--- a/mistelaflask/templates/admin/main_events/admin_main_events_list.html
+++ b/mistelaflask/templates/admin/main_events/admin_main_events_list.html
@@ -10,6 +10,7 @@
                 <th>Location</th>
                 <th>Name</th>
                 <th>Description</th>
+                <th>Contact</th>
             </tr>
         </thead>
         <tbody>
