--- a/mistelaflask/templates/index.html
+++ b/mistelaflask/templates/index.html
@@ -19,37 +19,6 @@
           </ul>
       {% endif %}
     {% endwith %}
-    <h4 class="subtitle">{{ main_event.main_date | format_datetime("%Y.%m.%d") }}</h4>
-    <div class="tile is-ancestor is-vertical is-half">
-        <div class="tile is-parent"> 
-            <div class="tile is-parent is-vertical is-3">
-            </div>
-            <div class="tile is-parent is-vertical is-3">
-              <a href="{{ url_for('main.events_list') }}"> 
-                <article class="tile is-child notification">
-                    <div class="content text has-text-centered">
-                        <p class="title">
-                          <i class="fa-regular fa-calendar"></i>
-                          Over the event
-                        </p>
-                    </div>
-                </article>
-                </a>
-            </div>
-            <div class="tile is-parent is-vertical is-3">
-                <a href="{{ url_for('main.invitations_list') }}">
-                <article class="tile is-child notification">
-                    <div class="content text has-text-centered">
-                        <p class="title">
-                            <i class="fa-solid fa-envelope"></i>
-                            Your invitation
-                        </p>
-                    </div>
-                </article>
-                </a>
-            </div> 
-            </a>
-        </div>
-    </div>
+    {% include "quick_menu.html" %}
     {% endif %}
 {% endblock %}
