fix(admin_invitation_edit_bulk.html): Fix updating bulk changes, all fields were returning the baby n value

--- a/mistelaflask/templates/admin/invitations/admin_invitation_edit_bulk.html
+++ b/mistelaflask/templates/admin/invitations/admin_invitation_edit_bulk.html
@@ -31,10 +31,10 @@
                     </select>
                 </td>
                 <td class="has-text-left">
-                    <input value="{{_inv.n_adults}}" min=0 class="input" type="number" name="n_babies_{{_inv.id}}">
+                    <input value="{{_inv.n_adults}}" min=0 class="input" type="number" name="n_adults_{{_inv.id}}">
                 </td>                
                 <td class="has-text-left">
-                    <input value="{{_inv.n_children}}" min=0 class="input" type="number" name="n_babies_{{_inv.id}}">
+                    <input value="{{_inv.n_children}}" min=0 class="input" type="number" name="n_children_{{_inv.id}}">
                 </td>
                 <td class="has-text-left">
                     <input value="{{_inv.n_babies}}" min=0 class="input" type="number" name="n_babies_{{_inv.id}}">
