chore(guest_invitations.html): Small text modification for clarification

--- a/mistelaflask/templates/guest/guest_invitations.html
+++ b/mistelaflask/templates/guest/guest_invitations.html
@@ -85,7 +85,8 @@
             </div>
         {% if response_submitted %}
             <div class="notification is-danger is-light">
-                Please contact us to modify your invitation.
+                Your invitation was correctly submitted. </br>
+                Please contact us if you wish to make any modifications.
             </div>
         {% else %}
             <button class="button is-block is-info is-large is-fullwidth">Save preferences</button>
